--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,6 @@ main * {
 
 @media screen and (min-width: 1000px) {
     html {
-        /* overflow: hidden; */
+        overflow: hidden;
     }
 }
