--- a/src/pages/Portfolio/BackgroundLines/BackgroundLinesItem.module.css
+++ b/src/pages/Portfolio/BackgroundLines/BackgroundLinesItem.module.css
@@ -1,7 +1,5 @@
 .wrapper {
     z-index: -1;
-    width: 100%;
-    height: 100%;
 }
 
 .background-container {
@@ -10,91 +8,166 @@
 }
 
 .background-container path {
-    stroke-width: 0.6;
+    stroke-width: 0.8;
     stroke: rgba(var(--color-orange), 0.5);
 }
 
 .background-container path:nth-of-type(2) {
-    stroke: rgba(var(--color-red-soft), 0.5);
-    animation: dash 10s forwards infinite linear;
+    stroke: rgba(var(--color-orange), 0.8);
+    filter: drop-shadow(0px 0px 1px rgba(var(--color-orange), 0.8))
+        drop-shadow(0px 0px 1px rgba(var(--color-orange), 0.5));
 }
 
 /* Individual svgs */
 
-.bottom-left {
+.bottom-left-1 {
     left: 0;
     bottom: -30%;
     height: 700px;
 }
 
-.bottom-left path:nth-of-type(2) {
+.bottom-left-1 path:nth-of-type(2) {
     stroke-dasharray: 700;
     stroke-dashoffset: 700;
+    animation: dash-700-1 10s forwards infinite linear;
 }
 
-@keyframes dash {
-    from {
+@keyframes dash-700-1 {
+    0%,
+    28% {
         stroke-dashoffset: 700;
     }
-    16% {
+    50% {
         stroke-dashoffset: 0;
     }
-    38% {
-        stroke-dashoffset: -700;
-    }
-    to {
+    71%,
+    100% {
         stroke-dashoffset: -700;
     }
 }
 
-.top-right {
+.bottom-right-1 {
     right: 0;
-    top: -10%;
-    height: 900px;
-}
-
-.top-right path:nth-of-type(2) {
-    stroke-dasharray: 700;
-    stroke-dashoffset: 700;
-}
-
-@keyframes dash {
-    from {
-        stroke-dashoffset: 700;
-    }
-    16% {
-        stroke-dashoffset: 0;
-    }
-    38% {
-        stroke-dashoffset: -700;
-    }
-    to {
-        stroke-dashoffset: -700;
-    }
-}
-
-.middle {
-    right: 20%;
-    top: 30%;
+    bottom: 10%;
     height: 700px;
 }
 
-.middle path:nth-of-type(2) {
+.bottom-right-1 path:nth-of-type(2) {
     stroke-dasharray: 700;
     stroke-dashoffset: 700;
+    animation: dash-700-right-1 10s forwards infinite linear;
 }
 
-@keyframes dash {
-    from {
+@keyframes dash-700-right-1 {
+    0% {
         stroke-dashoffset: 700;
     }
     16% {
         stroke-dashoffset: 0;
     }
-    38% {
+    38%,
+    100% {
         stroke-dashoffset: -700;
     }
-    to {
+}
+
+.bottom-right-2 {
+    right: -10rem;
+    bottom: -35%;
+    height: 800px;
+}
+
+.bottom-right-2 path:nth-of-type(2) {
+    stroke-dasharray: 700;
+    stroke-dashoffset: 700;
+    animation: dash-700-right-2 10s forwards infinite linear;
+}
+
+@keyframes dash-700-right-2 {
+    0%,
+    66% {
+        stroke-dashoffset: 700;
+    }
+    83% {
+        stroke-dashoffset: 0;
+    }
+    100% {
+        stroke-dashoffset: -700;
+    }
+}
+
+.bottom-left-3 {
+    left: 0;
+    bottom: -45%;
+    height: 700px;
+}
+
+.bottom-left-3 path:nth-of-type(2) {
+    stroke-dasharray: 1150;
+    stroke-dashoffset: 1150;
+    animation: dash-1150-left-3 10s forwards infinite linear;
+}
+
+@keyframes dash-1150-left-3 {
+    0% {
+        stroke-dashoffset: 1150;
+    }
+    16% {
+        stroke-dashoffset: 0;
+    }
+    38%,
+    100% {
+        stroke-dashoffset: -1150;
+    }
+}
+
+.bottom-right-contact {
+    right: 0;
+    bottom: 0;
+    height: 500px;
+}
+
+.bottom-right-contact path:nth-of-type(2) {
+    stroke-dasharray: 700;
+    stroke-dashoffset: 700;
+    animation: dash-700-right-contact 10s forwards infinite linear;
+}
+
+@keyframes dash-700-right-contact {
+    0%,
+    66% {
+        stroke-dashoffset: 700;
+    }
+    83% {
+        stroke-dashoffset: 0;
+    }
+    100% {
+        stroke-dashoffset: -700;
+    }
+}
+
+.bottom-left-contact {
+    left: 0;
+    bottom: 0;
+    height: 500px;
+}
+
+.bottom-left-contact path:nth-of-type(2) {
+    stroke-dasharray: 700;
+    stroke-dashoffset: 700;
+    animation: dash-700-left-contact 10s forwards infinite linear;
+}
+
+@keyframes dash-700-left-contact {
+    0%,
+    28% {
+        stroke-dashoffset: 700;
+    }
+    50% {
+        stroke-dashoffset: 0;
+    }
+    71%,
+    100% {
         stroke-dashoffset: -700;
     }
 }
