--- a/src/pages/Portfolio/Portfolio.module.css
+++ b/src/pages/Portfolio/Portfolio.module.css
@@ -1,5 +1,8 @@
 .portfolio-container {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     isolation: isolate;
     z-index: 10;
     background-color: rgb(var(--color-white));
@@ -7,6 +10,7 @@
 }
 
 .portfolio-container > * {
+    width: 100%;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -49,6 +53,7 @@
     display: flex;
     position: relative;
     margin-bottom: 5rem;
+    max-width: 140rem;
 }
 
 .portfolio-item-container,
@@ -56,9 +61,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-inline: auto;
-    padding-inline: 5rem 8rem;
-    max-width: 140rem;
+    margin-inline: 5rem 8rem;
     align-items: center;
 }
 
