--- a/src/pages/Portfolio/BackgroundLines/BackgroundLinesItem.module.css
+++ b/src/pages/Portfolio/BackgroundLines/BackgroundLinesItem.module.css
@@ -171,3 +171,9 @@
         stroke-dashoffset: -700;
     }
 }
+
+@media screen and (max-width: 850px) {
+    .bottom-left-contact {
+        display: none;
+    }
+}
