--- a/src/pages/Portfolio/Description/PortfolioDescription.module.css
+++ b/src/pages/Portfolio/Description/PortfolioDescription.module.css
@@ -96,6 +96,7 @@
         order: 2;
         max-width: 80rem;
         padding-left: 0;
+        margin-inline: 1rem;
     }
 
     .description-container h3 {
@@ -105,5 +106,11 @@
 
     .description-container:nth-of-type(1) {
         max-height: 60rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .description-container p {
+        font-size: 1.4rem;
     }
 }
