--- a/src/pages/header/ScrollIcon.module.css
+++ b/src/pages/header/ScrollIcon.module.css
@@ -50,11 +50,13 @@
     transition: all 300ms;
 }
 
-.transition {
-    border: none;
-}
+@media screen and (min-width: 785px) {
+    .transition {
+        border: none;
+    }
 
-.transition g {
-    opacity: 0;
-    translate: 0 5rem;
+    .transition g {
+        opacity: 0;
+        translate: 0 5rem;
+    }
 }
