--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,19 +1,45 @@
-:root {
-    --color-red-soft-hex: #570000;
-    --color-red-bright-hex: #a00500;
-    --color-white-hex: #fcffff;
-    --color-orange-hex: #ff6a05;
-    --color-grey-hex: #aaaaaa;
-    --color-black: black;
+@media (prefers-color-scheme: light) {
+    :root {
+        --color-red-soft-hex: #570000;
+        --color-red-bright-hex: #a00500;
+        --color-white-hex: #fcffff;
+        --color-orange-hex: #ff6a05;
+        --color-grey-hex: #aaaaaa;
+        --color-black: black;
 
-    --color-red-soft: 87, 0, 0;
-    --color-red-bright: 160, 5, 0;
-    --color-white: 252, 255, 255;
-    --color-white-text: 252, 255, 255;
-    --color-white-text-both: 252, 255, 255;
-    --color-orange: 255, 106, 5;
-    --color-black: 0, 0, 0;
-    --color-grey: 170, 170, 170;
+        --color-red-soft: 87, 0, 0;
+        --color-red-bright: 160, 5, 0;
+        --color-white: 252, 255, 255;
+        --color-white-text: 252, 255, 255;
+        --color-white-text-both: 252, 255, 255;
+        --color-orange: 255, 106, 5;
+        --color-black: 0, 0, 0;
+        --color-grey: 170, 170, 170;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --color-red-soft-hex: #0c134f;
+        --color-red-bright-hex: #1d267d;
+        --color-white-hex: #5c469c;
+        --color-orange-hex: #d4adfc;
+        --color-black: #fcffff;
+
+        --color-red-soft: 35, 39, 47;
+        --color-red-bright: 52, 58, 70;
+        --color-white: 43, 48, 59;
+        --color-white-text: 20, 158, 202;
+        --color-white-text-both: 252, 255, 255;
+        --color-orange: 20, 158, 202;
+        --color-black: 252, 255, 255;
+        --color-grey: 170, 170, 170;
+
+        --color-blue-black: 35, 39, 47;
+        --color-blue: 52, 58, 70;
+        --color-blue-bright: 20, 158, 202;
+        --color-blue-dark: 43, 48, 59;
+    }
 }
 
 main[data-theme='dark'] {
@@ -36,6 +62,24 @@ main[data-theme='dark'] {
     --color-blue: 52, 58, 70;
     --color-blue-bright: 20, 158, 202;
     --color-blue-dark: 43, 48, 59;
+}
+
+main[data-theme='light'] {
+    --color-red-soft-hex: #570000;
+    --color-red-bright-hex: #a00500;
+    --color-white-hex: #fcffff;
+    --color-orange-hex: #ff6a05;
+    --color-grey-hex: #aaaaaa;
+    --color-black: black;
+
+    --color-red-soft: 87, 0, 0;
+    --color-red-bright: 160, 5, 0;
+    --color-white: 252, 255, 255;
+    --color-white-text: 252, 255, 255;
+    --color-white-text-both: 252, 255, 255;
+    --color-orange: 255, 106, 5;
+    --color-black: 0, 0, 0;
+    --color-grey: 170, 170, 170;
 }
 
 * {
