--- a/src/pages/Socials/Socials.module.css
+++ b/src/pages/Socials/Socials.module.css
@@ -38,9 +38,6 @@
     }
 
     .social-container.slideOut div {
-        /* animation: slideOut 1s forwards;
-        animation-delay: var(--delay); */
-        /* transform: translateX(-10rem); */
         translate: calc(-1 * var(--width));
         transition: all 1s;
         transition-delay: calc(500ms + var(--delay));
@@ -59,6 +56,10 @@
     .social-container div:nth-of-type(3) {
         --delay: 600ms;
     }
+
+    .social-container div:nth-of-type(4) {
+        --delay: 750ms;
+    }
 }
 
 @keyframes slideOut {
@@ -71,4 +72,39 @@
     to {
         transform: translateX(var(--width));
     }
+}
+
+/* Share */
+
+.share {
+    --height: 50px;
+    width: 50px;
+    position: fixed;
+    height: var(--height);
+    bottom: -50px;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    cursor: pointer;
+    --width: 50px;
+    background: rgb(var(--color-orange));
+    translate: -50px;
+    cursor: default;
+    border-top-right-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+}
+
+.social-container .share:hover {
+    width: 50px;
+}
+
+.share svg {
+    width: 30px;
+    height: 30px;
+    fill: rgb(var(--color-white));
+}
+
+.social-container.slideOut .share {
+    translate: 0;
 }
