--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -86,6 +86,18 @@ main[data-theme='light'] {
     color: rgb(var(--color-black));
 }
 
+@media screen and (min-width: 1000px) and (min-height: 900px) {
+    html {
+        overflow: hidden;
+    }
+}
+
+@media screen and (min-width: 1450px) and (min-height: 650px) {
+    html {
+        overflow: hidden;
+    }
+}
+
 /* span {
     position: absolute;
     width: 100px;
