fix header and nav at small window width

--- a/src/pages/header/Header.module.css
+++ b/src/pages/header/Header.module.css
@@ -35,7 +35,12 @@
 }
 
 @media screen and (max-width: 1000px) {
+    .header {
+        padding-top: 5rem;
+    }
+
     .header-fixed {
         position: absolute;
+        /* margin-top: 10rem; */
     }
 }
