--- a/src/pages/Socials/Socials.module.css
+++ b/src/pages/Socials/Socials.module.css
@@ -12,6 +12,7 @@
     --width: 50px;
 }
 
+.social-container a,
 .social-container div {
     width: var(--width);
     display: flex;
@@ -21,6 +22,7 @@
     transition: all 300ms;
 }
 
+.social-container a:hover,
 .social-container div:hover {
     width: 70px;
 }
@@ -37,27 +39,29 @@
         transform: translateX(calc(-1 * var(--width)));
     }
 
+    .social-container.slideOut a,
     .social-container.slideOut div {
         translate: calc(-1 * var(--width));
         transition: all 1s;
         transition-delay: calc(500ms + var(--delay));
     }
 
+    .social-container a,
     .social-container div {
         --delay: 300ms;
         animation: slideIn 1s forwards;
         animation-delay: var(--delay);
     }
 
-    .social-container div:nth-of-type(2) {
+    .social-container > :nth-child(2) {
         --delay: 450ms;
     }
 
-    .social-container div:nth-of-type(3) {
+    .social-container > :nth-child(3) {
         --delay: 600ms;
     }
 
-    .social-container div:nth-of-type(4) {
+    .social-container > :nth-child(4) {
         --delay: 750ms;
     }
 }
