--- a/src/pages/UI/Nav.module.css
+++ b/src/pages/UI/Nav.module.css
@@ -8,7 +8,7 @@
     left: 0;
     right: 0;
     margin-inline: auto;
-    margin-top: 2rem;
+    padding-top: 2rem;
     z-index: 1;
     display: flex;
     justify-content: center;
@@ -18,6 +18,7 @@
 .wrapper {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 5rem;
 }
 
@@ -29,7 +30,10 @@
     }
 
     .nav {
+        position: static;
         z-index: 100;
+        padding-inline: 5rem 6rem;
+        background: rgb(var(--color-red-bright));
     }
 }
 
